[UPDATE] update webpages

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      height: 100vh;
+    }
+  </style>
 </head>
 
 <body>
@@ -23,7 +28,8 @@
         <div class="underline"></div>
       </div>
       <div class="input-box button">
-        <input type="submit" name="" value="Login" onclick="login()">
+        <!-- <input type="submit" value="Login" onclick="login()"> -->
+        <button type="button" class="login_button" onclick="login()">submit</button>
       </div>
     </form>
   </div>
@@ -37,9 +43,6 @@
   <!--===============================================================================================-->
   <script src="vendor/tilt/tilt.jquery.min.js"></script>
   <!--===============================================================================================-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"
-    integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/main.js"></script>
 </body>
 
