--- a/frontend/portal/main.html
+++ b/frontend/portal/main.html
@@ -9,9 +9,31 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
+  <div class="header">
+    <img class="portal-logo" src="../img/cake-logo.png" />
+    <a href="#default" class="logo">SC&B</a>
+    <div class="header-right">
+      <a onclick="navigate('orders.html')">Orders</a>
+      <a onclick="navigate('customers.html')">Customers</a>
+      <a onclick="navigate('financial.html')">Financial Data</a>
+    </div>
+  </div>
+  
+  <!-- <h1 style="height: 100%;">Portal open</h1> -->
+  <iframe class="iframe_main" src="orders.html" height="700vh" width="100%" title="Iframe Example"></iframe>
+
+  <!--===============================================================================================-->
+  <script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
+  <!--===============================================================================================-->
+  <script src="../vendor/bootstrap/js/popper.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!--===============================================================================================-->
+  <script src="../vendor/select2/select2.min.js"></script>
+  <!--===============================================================================================-->
+  <script src="../vendor/tilt/tilt.jquery.min.js"></script>
+  <!--===============================================================================================-->
   <script src="../js/portal.js"></script>
 </body>
 
