--- a/frontend/portal/main.html
+++ b/frontend/portal/main.html
@@ -7,17 +7,20 @@
   <!---<title> Responsive Login Form | CodingLab </title>--->
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
   <div class="header">
     <img class="portal-logo" src="../img/cake-logo.png" />
-    <a href="#default" class="logo">SC&B</a>
+    <a class="logo">SC&B</a>
     <div class="header-right">
       <a onclick="navigate('orders.html')">Orders</a>
       <a onclick="navigate('customers.html')">Customers</a>
       <a onclick="navigate('financial.html')">Financial Data</a>
+      <button type="button" class="btn btn-danger" onclick="logOut()">Log Out</button>
     </div>
   </div>
   
@@ -33,6 +36,9 @@
   <script src="../vendor/select2/select2.min.js"></script>
   <!--===============================================================================================-->
   <script src="../vendor/tilt/tilt.jquery.min.js"></script>
+  <!--===============================================================================================-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!--===============================================================================================-->
   <script src="../js/portal.js"></script>
 </body>
