--- a/frontend/portal/orders.html
+++ b/frontend/portal/orders.html
@@ -6,7 +6,9 @@
     <meta charset="UTF-8">
     <!---<title> Responsive Login Form | CodingLab </title>--->
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -15,7 +17,8 @@
     <h1>Orders</h1>
 
     <div class="container-table">
-        <button type="button" class="btn btn-info">Add Order</button>
+        <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Add
+            Order</button>
         <div class="row main-row">
             <div class="col-12">
                 <table class="table table-bordered">
@@ -35,7 +38,7 @@
                             <td>Cristina</td>
                             <td>2.846</td>
                             <td>
-                                
+
                                 <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
                             </td>
                         </tr>
@@ -44,7 +47,7 @@
                             <td>Bootstrap Grid 4 Tutorial and Examples</td>
                             <td>Cristina</td>
                             <td>3.417</td>
-                            <td>    
+                            <td>
                                 <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
                             </td>
                         </tr>
@@ -54,7 +57,7 @@
                             <td>Cristina</td>
                             <td>1.234</td>
                             <td>
-                                
+
                                 <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
                             </td>
                         </tr>
@@ -64,6 +67,33 @@
         </div>
     </div>
 
+    <!-- modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="mb-3">
+                            <label for="recipient-name" class="col-form-label">Recipient:</label>
+                            <input type="text" class="form-control" id="recipient-name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message-text" class="col-form-label">Message:</label>
+                            <textarea class="form-control" id="message-text"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Send message</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -72,14 +102,15 @@
     <script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
     <!--===============================================================================================-->
     <script src="../vendor/bootstrap/js/popper.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <!--===============================================================================================-->
     <script src="../vendor/select2/select2.min.js"></script>
     <!--===============================================================================================-->
     <script src="../vendor/tilt/tilt.jquery.min.js"></script>
     <!--===============================================================================================-->
-
-    <!-- ---------------------------------------------------------------------------------------- -->
     <script src="../js/portal.js"></script>
 </body>
 
