--- a/frontend/portal/orders.html
+++ b/frontend/portal/orders.html
@@ -16,7 +16,7 @@
 <body>
     <h1>Orders</h1>
 
-    <div class="container-table">
+    <div class="container-table order-table">
         <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Add
             Order</button>
         <div class="row main-row">
@@ -24,11 +24,12 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th scope="col">Day</th>
-                            <th scope="col">Article Name</th>
-                            <th scope="col">Author</th>
-                            <th scope="col">Shares</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col">Order ID</th>
+                            <th scope="col">Order Name</th>
+                            <th scope="col">Order Price</th>
+                            <th scope="col">Customer Name/ID</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -37,25 +38,7 @@
                             <td>Bootstrap 4 CDN and Starter Template</td>
                             <td>Cristina</td>
                             <td>2.846</td>
-                            <td>
-
-                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Bootstrap Grid 4 Tutorial and Examples</td>
-                            <td>Cristina</td>
-                            <td>3.417</td>
-                            <td>
-                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Bootstrap Flexbox Tutorial and Examples</td>
-                            <td>Cristina</td>
-                            <td>1.234</td>
+                            <td>2.846</td>
                             <td>
 
                                 <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
