[UPDATE] New functionailt updated

--- a/frontend/portal/main.html
+++ b/frontend/portal/main.html
@@ -41,6 +41,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!--===============================================================================================-->
   <script src="../js/portal.js"></script>
+  <script src="../js/actions.js"></script>
 </body>
 
 </html>
