--- a/frontend/portal/customers.html
+++ b/frontend/portal/customers.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <!---<title> Responsive Login Form | CodingLab </title>--->
     <link rel="stylesheet" href="../css/styles.css">
+        <!-- CSS only -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -20,47 +21,18 @@
         <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Add Customers</button>
         <div class="row main-row">
             <div class="col-12">
-                <table class="table table-bordered">
+                <table class="table table-bordered customer-table-fill">
                     <thead>
                         <tr>
-                            <th scope="col">Day</th>
-                            <th scope="col">Article Name</th>
-                            <th scope="col">Author</th>
-                            <th scope="col">Shares</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col">Customer ID</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Email ID</th>
+                            <th scope="col">Phone Number</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">Action</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Bootstrap 4 CDN and Starter Template</td>
-                            <td>Cristina</td>
-                            <td>2.846</td>
-                            <td>
-
-                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Bootstrap Grid 4 Tutorial and Examples</td>
-                            <td>Cristina</td>
-                            <td>3.417</td>
-                            <td>
-                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Bootstrap Flexbox Tutorial and Examples</td>
-                            <td>Cristina</td>
-                            <td>1.234</td>
-                            <td>
-
-                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-                    </tbody>
                 </table>
             </div>
         </div>
@@ -68,28 +40,44 @@
 
 
      <!-- modal -->
-     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+     <div class="modal fade customer-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Add Customer</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form>
-                        <div class="mb-3">
-                            <label for="recipient-name" class="col-form-label">Recipient:</label>
-                            <input type="text" class="form-control" id="recipient-name">
+                        <div class="form-group">
+                            <label for="customer-id" class="col-form-label">Customer ID:</label>
+                            <input type="text" class="form-control" id="customer-id" readonly>
                         </div>
-                        <div class="mb-3">
-                            <label for="message-text" class="col-form-label">Message:</label>
-                            <textarea class="form-control" id="message-text"></textarea>
+                        <div class="form-group">
+                            <label for="customer-first-name" class="col-form-label">First Name:</label>
+                            <input type="text" class="form-control" id="customer-first-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="customer-last-name" class="col-form-label">Last Name:</label>
+                            <input type="text" class="form-control" id="customer-last-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="customer-email" class="col-form-label">Email ID:</label>
+                            <input type="email" class="form-control" id="customer-email">
+                        </div>
+                        <div class="form-group">
+                            <label for="customer-phone" class="col-form-label">Phone Number:</label>
+                            <input type="text" class="form-control" id="customer-phone">
+                        </div>
+                        <div class="form-group">
+                            <label for="customer-address" class="col-form-label">Address:</label>
+                            <textarea class="form-control" id="customer-address" rows="3"></textarea>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Send message</button>
+                    <button type="button" class="btn btn-primary" onclick="addCustomer()">Add Customer</button>
                 </div>
             </div>
         </div>
@@ -114,6 +102,7 @@
 
     <!-- ---------------------------------------------------------------------------------------- -->
     <script src="../js/portal.js"></script>
+    <script src="../js/actions.js"></script>
 </body>
 
 </html>
