--- a/frontend/portal/financial.html
+++ b/frontend/portal/financial.html
@@ -18,47 +18,26 @@
     <div class="container-table">
         <div class="row">
             <div class="col-12">
-                <table class="table table-bordered">
+                <table class="table table-bordered finanse-fill">
                     <thead>
                         <tr>
-                            <th scope="col">Day</th>
-                            <th scope="col">Article Name</th>
-                            <th scope="col">Author</th>
-                            <th scope="col">Shares</th>
-                            <th scope="col">Actions</th>
+                            <th scope="col">Expense Type</th>
+                            <th scope="col">Amount</th>
+                            <th scope="col">Expense Date</th>
+                            <th scope="col">Action</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <!-- <tbody>
                         <tr>
                             <th scope="row">1</th>
                             <td>Bootstrap 4 CDN and Starter Template</td>
                             <td>Cristina</td>
-                            <td>2.846</td>
                             <td>
 
                                 <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
                             </td>
                         </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Bootstrap Grid 4 Tutorial and Examples</td>
-                            <td>Cristina</td>
-                            <td>3.417</td>
-                            <td>
-                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Bootstrap Flexbox Tutorial and Examples</td>
-                            <td>Cristina</td>
-                            <td>1.234</td>
-                            <td>
-
-                                <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
-                            </td>
-                        </tr>
-                    </tbody>
+                    </tbody> -->
                 </table>
             </div>
         </div>
@@ -81,6 +60,7 @@
 
     <!-- ---------------------------------------------------------------------------------------- -->
     <script src="../js/portal.js"></script>
+    <script src="../js/actions.js"></script>
 </body>
 
 </html>
