--- a/frontend/portal/orders.html
+++ b/frontend/portal/orders.html
@@ -17,7 +17,7 @@
     <h1>Orders</h1>
 
     <div class="container-table order-table">
-        <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">Add
+        <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="loadCustomerData()">Add
             Order</button>
         <div class="row main-row">
             <div class="col-12">
@@ -55,10 +55,18 @@
                             <label for="order-name" class="col-form-label">Order Name:</label>
                             <input type="text" class="form-control" id="order-name" required>
                         </div>
+
+
                         <div class="form-group">
+                            <label for="customer-name-load">Customer Name</label>
+                            <select class="form-control select-from-customer" id="customer-name-load">
+                              <option></option>
+                            </select>
+                          </div>
+                        <!-- <div class="form-group">
                             <label for="customer-name" class="col-form-label">Customer Name:</label>
                             <input type="text" class="form-control" id="customer-name">
-                        </div>
+                        </div> -->
                         <div class="form-group">
                             <label for="order-price" class="col-form-label">Order Price:</label>
                             <input type="text" class="form-control" id="order-price">
