--- a/frontend/portal/orders.html
+++ b/frontend/portal/orders.html
@@ -17,7 +17,8 @@
     <h1>Orders</h1>
 
     <div class="container-table order-table">
-        <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="loadCustomerData()">Add
+        <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            onclick="loadCustomerData()">Add
             Order</button>
         <div class="row main-row">
             <div class="col-12">
@@ -38,7 +39,8 @@
     </div>
 
     <!-- modal -->
-    <div class="modal fade order-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade order-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -60,9 +62,9 @@
                         <div class="form-group">
                             <label for="customer-name-load">Customer Name</label>
                             <select class="form-control select-from-customer" id="customer-name-load">
-                              <option></option>
+                                <option></option>
                             </select>
-                          </div>
+                        </div>
                         <!-- <div class="form-group">
                             <label for="customer-name" class="col-form-label">Customer Name:</label>
                             <input type="text" class="form-control" id="customer-name">
@@ -88,9 +90,6 @@
             </div>
         </div>
     </div>
-
-
-
 
     <!--===============================================================================================-->
     <script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
