[UPDATE] New functionailt updated

--- a/frontend/portal/financial.html
+++ b/frontend/portal/financial.html
@@ -48,7 +48,7 @@
                     <form id="get-order-form">
                         <div class="form-group">
                             <label for="expense-id" class="col-form-label">Expense ID:</label>
-                            <input type="text" class="form-control" id="expense-id">
+                            <input type="text" class="form-control" id="expense-id" readonly>
                         </div>
                         <div class="form-group">
                             <label for="expense-type" class="col-form-label">Expense Type:</label>
